syntax = "proto3";

package orderitems.events;
option java_package = "com.tbhatta.protos.me";

option java_multiple_files = true;

message OrderItemEvent {
  string orderId = 1;
  string clientId = 2;
  string asset = 3;
  string orderTime = 4;
  string orderType = 5;
  string amount = 6;
  string volume = 7;

}